@startuml
title "Diagrama de Clases — Sistema de NPCs"

' ======================================
'            ENUMS / STRUCTS
' ======================================
enum EntityType {
  Car
  NPCCar
  Wall
  Railing
  Sensor
}

enum RenderLayer {
  UNDER
  OVER
}

struct NpcInfo {
  +float x
  +float y
  +float angle
  +float w
  +float h
  +CarType type
  +RenderLayer layer
}

struct RoadShape {
  +int id
  +float minX
  +float maxX
  +float minY
  +float maxY
  +b2Vec2 center
  +bool horizontal
}

struct IntersectionNode {
  +int id
  +b2Vec2 pos
  +vector<int> connectedRoadIds
}

struct RoadSegment {
  +int id
  +int roadId
  +IntersectionNode* a
  +IntersectionNode* b
  +b2Vec2 start
  +b2Vec2 end
  +bool horizontal
}

' ======================================
'                 CAR
' ======================================

class Car {
  -RenderLayer layer
  -bool accelerating
  -bool braking
  -TurnDirection turning
  -bool nitroActive
  -float nitroTimeRemaining
  -float nitroCooldownRemaining
  -CarStaticStats staticStats
  -float health
  -UpgradeStats upgrades
  -shared_ptr<IPhysicalBody> body
  -CarType carType

  +Car(id, type, staticStats, body, entityType)
  +setLayer(RenderLayer)
  +applyInput()
  +update(dt)
  +damage(amount)
  +isDestroyed() : bool
  +getSnapshot() : CarSnapshot
  +getLayer() : RenderLayer
  +getBody() : IPhysicalBody
  +getType() : CarType
}


' ======================================
'             NPC VEHICLE
' ======================================

class NPCVehicle {
  -unique_ptr<Car> car
  -IntersectionNode* targetNode
  -IntersectionNode* previousNode

  +NPCVehicle(unique_ptr<Car>)
  +setTargetNode(node)
  +update(dt)
  +getCar() : Car*
  +getTarget() : IntersectionNode*
  +getPrevious() : IntersectionNode*
  +buildSnapshot() : NpcInfo
  -steeringSeek(target) : b2Vec2
}

NPCVehicle --> Car : composición
NPCVehicle --> IntersectionNode : "targetNode"
NPCVehicle --> NpcInfo

' ======================================
'              ROAD GRAPH
' ======================================

class RoadGraph {
  -vector<RoadShape> roads
  -vector<IntersectionNode> nodes
  -vector<RoadSegment> segments
  -int nextNodeId

  +addRoad(RoadShape)
  +build()
  +getNodes() : vector<IntersectionNode>
  +getSegments() : vector<RoadSegment>
  +nearestNode(x,y) : IntersectionNode*
}

RoadGraph --> RoadShape
RoadGraph --> IntersectionNode
RoadGraph --> RoadSegment

' ======================================
'            TRAFFIC SYSTEM
' ======================================

class TrafficSystem {
  -RoadGraph* graph
  -EntityFactory& factory
  -vector<unique_ptr<NPCVehicle>> npcs

  +TrafficSystem(factory)
  +loadGraph(graph)
  +spawnNPCs()
  +update(dt)
  +getNPCs() : vector<unique_ptr<NPCVehicle>>&
}

TrafficSystem --> NPCVehicle : "maneja varios"
TrafficSystem --> RoadGraph : "usa"
TrafficSystem --> EntityFactory : "crea autos"

' ======================================
'            ENTITY FACTORY
' ======================================

class EntityFactory {
  -Box2DPhysicsWorld& world
  -YamlGameConfig& cfg
  -Box2DPhysicsFactory physicsFactory

  +createCar()
  +createNpcCar()
  +createBuilding()
  +createRailing()
  +createCheckpoint()
  +createBridgeSensor()
}

EntityFactory --> NPCVehicle : crea
EntityFactory --> Car


@enduml
